WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45305
Plug leak in WebDeviceOrientationClientMock
https://bugs.webkit.org/show_bug.cgi?id=45305
Summary
Plug leak in WebDeviceOrientationClientMock
Hans Wennborg
Reported
2010-09-07 09:47:40 PDT
Plug leak in WebDeviceOrientationClientMock
Attachments
Patch
(2.88 KB, patch)
2010-09-07 10:02 PDT
,
Hans Wennborg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hans Wennborg
Comment 1
2010-09-07 10:02:38 PDT
Created
attachment 66733
[details]
Patch
Jeremy Orlow
Comment 2
2010-09-08 02:44:17 PDT
Comment on
attachment 66733
[details]
Patch r=me
Hans Wennborg
Comment 3
2010-09-08 06:16:56 PDT
Comment on
attachment 66733
[details]
Patch Clearing flags on attachment: 66733 Committed
r66976
: <
http://trac.webkit.org/changeset/66976
>
Hans Wennborg
Comment 4
2010-09-08 06:17:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug