2010-09-08  Hans Wennborg  <hans@chromium.org>

Reviewed by Jeremy Orlow.

        Plug leak in WebDeviceOrientationClientMock
        https://bugs.webkit.org/show_bug.cgi?id=45305

        WebDeviceOrientationClientMock is responsible for destroying the
        WebDeviceOrientationController object pointed to by the argument
        passed to the setController() member function.

        Also use the new WebPrivateOnwPtr for m_clientMock.

        * public/WebDeviceOrientationClientMock.h:
        * src/WebDeviceOrientationClientMock.cpp:
        (WebKit::WebDeviceOrientationClientMock::setController):
        (WebKit::WebDeviceOrientationClientMock::initialize):
        (WebKit::WebDeviceOrientationClientMock::reset):


Canonical link: https://commits.webkit.org/57729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66976 268f45cc-cd09-0410-ab3c-d52691b4dbfc